@@ -1,3 +1,12 @@
+2006-01-07  Alexey Proskuryakov  <ap@nypop.com>
+
+        Reviewed by Maciej.
+
+	- Fix WebCore development build
+	http://bugzilla.opendarwin.org/show_bug.cgi?id=6408
+
+        * kxmlcore/Assertions.h: Use __VA_ARGS__ in variadic macros.
+
 2006-01-06  Maciej Stachowiak  <mjs@apple.com>
 
 	Reviewed by Darin.
